# tradingwithMT5

./: LICENSE  README.md  push.sh  start-full-stack.bat  start-full-stack.sh
trading/: .env.example  .gitignore  Dockerfile  README.md  check_user.py  create_admin.py  encryption.key  main.py  pyproject.toml  test_auth.py  test_enum.py  test_jwt.py
trading/app/: main.py
trading/app/core/: config.py  enums.py  logging.py  security.py
trading/app/db/: init_db.py
trading/app/enums/: __init__.py  user.py
trading/app/middlewares/: correlation.py
trading/app/models/: __init__.py  dataset.py  mt5.py  mt5_account.py  settings.py  trading.py  user.py
trading/app/routes/: __init__.py  deps.py
trading/app/routes/dataset/: mutation.py  query.py  subscription.py
trading/app/routes/mt5/: __init__.py  account_management.py  mutation.py  query.py  subscription.py
trading/app/routes/trading/: __init__.py  mutation.py  query.py  subscription.py
trading/app/routes/users/: __init__.py  mutation.py  query.py  subscription.py  user.py
trading/app/schemas/: __init__.py  common.py  dataset.py  error.py  mt5.py  mt5_account.py  settings.py  token.py  trading.py  user.py
trading/app/services/: __init__.py  collect_dataset.py  mt5_service.py
trading/app/utils/: app.py  calc_average.py  encryption.py  log.py  number.py  security_utils.py  telegram.py  time.py  timeframe.py  timeframe_timer.py  tor.py  types.py
trading/app/utils/Binance/: Future.py  Spot.py  StreamFuture.py  StreamSpot.py  __init__.py  (+2 more)
trading/tests/utils/: test_timeframe.py  test_timeframe_timer.py
(+62 files in other folders)
